# Infinite-DOM

./: .dockerignore  .env.example  .gitattributes  .gitignore  BLOG.md  BUILD_LOG.md  CLAUDE.md  Dockerfile  GUIDE.md  README.md  client.py  inference.py  minimum-requirements.md  openenv.yaml  oracle_trajectories.jsonl  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/skills/hackathon-expert/: hackathon-expert.md
.claude/skills/openenv-builder/: ARCHITECTURE.md  SKILL.md  SUBMISSION.md
generated_pages/: task1_seed1.html  task2_seed2.html  task3_seed1.html  task3_seed2.html  task4_seed1.html
infinite_dom/: config.py  graders.py  models.py  reward_calculator.py  task_graph.py
infinite_dom/browser/: a11y_formatter.py  playwright_driver.py
infinite_dom/environment/: infinite_dom_env.py
infinite_dom/generator/: dom_generator.py  serve_html.py  variance.py
infinite_dom/generator/templates/: _base_styles.jinja  booking_flow.jinja  ecommerce_flow.jinja
infinite_dom/oracle/: booking_flow_oracle.py
infinite_dom/server/: app.py  dashboard.html
scripts/: run_server.sh  setup_dev.sh  smoke_test.py  validate_openenv.sh
tests/: test_a11y_formatter.py  test_browser_driver.py  test_environment_e2e.py  test_generator.py  test_graders.py  test_models.py  test_oracle.py  test_phase1_scaffold.py  test_reward.py  test_task_graph.py
training/: augment_cot.py  build_notebook.py  generate_oracle_data.py  train_infinite_dom.ipynb  train_infinite_dom_v2.ipynb  upload_oracle_data.py
