[project]
name = "infinite-dom"
version = "0.1.0"
description = "Procedurally generated DOM training environment for web agents"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.115.4",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.2",
    "jinja2>=3.1.4",
    "playwright>=1.48.0",
    "aiohttp>=3.10.10",
    "httpx>=0.27.2",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.2",
    "rich>=13.9.3",
    "numpy>=1.26.4",
]

[project.scripts]
infinite-dom-server = "infinite_dom.server.app:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]  # Line length handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 60
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "browser: marks tests that require a real browser",
    "e2e: marks end-to-end tests",
]
